# dale-v.3.0

./: .env.example  .env.production  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  DALE_STATUS_TRACKER.md  DEPLOYMENT.md  INSTRUCCIONES-FINALES.md  PROJECT_MANAGEMENT_FRAMEWORK.md  PROJECT_STATUS.md  README-Docker.md  README.md  SCRIPTS.md  TESTING.md  UI_Context.md  add_phone_column.sql  check_env.py  cspell.json  dale_ide_instructions.txt  deploy-guide.md  deploy.sh  deploy.sh.save  dev.sh  docker-compose.prod.yml  docker-compose.yml  docker-manager.sh  generate_icons.py  install-test-deps.sh  install.sh  lighthouse-report.report.html  lighthouse-report.report.json  project_plan_full.txt  renovate.json  seed_demo.py  start.sh  stop.sh  tatus  (+5 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: API_DOCS.md  Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt  test_api.py
backend/app/: main.py
backend/app/middleware/: auth.py
backend/app/models/: schemas.py
backend/app/routes/: bookings.py  notifications.py  reviews.py  rides.py  users.py
backend/app/services/: __init__.py  notifications.py
backend/app/utils/: database.py
backend/scripts/: create_auth_user.py  seed.py
backend/tests/: README.md  conftest.py  test_examples.py  test_main.py  test_notifications.py
dale/: Makefile  PROJECT_STATUS.md  README.md  vercel.json
dale/backend/: Dockerfile  pyproject.toml
dale/backend/app/: main.py
dale/backend/prisma/: schema.prisma
deployment-guides/: README.md  aws-deployment.md  (+4 more)
(+211 files in other folders)
